[tool.poetry]
name = "mlflow_server"
version = "0.1.0"
description = ""
authors = ["altescy <altescy@fastmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
boto3 = "^1.26.41"
mlflow = "^2.6.0"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.masonry.api"
